[package]
name = "esa_slack_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
color-spantrace = "0.2.1"
dotenv = "0.15.0"
serde = {version = "1.0.210", features = ["derive"]}
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
